Asuno Salon head spa launch

--- a/head-spa.html
+++ b/head-spa.html
@@ -139,7 +139,7 @@
 
         <!--Page Header Start-->
         <section class="page-header">
-            <div class="page-header__bg" style="background-image: url(assets/images/My-images/head-4.jpg);">
+            <div class="page-header__bg" style="background-image: url(assets/images/My-images/head-header.jpg);">
             </div>
             <div class="container">
                 <div class="page-header__inner">
@@ -175,126 +175,136 @@
                             </div>
                             <div class="services-details-two__help-line">
                                 
-                                <!-- <div class="services-details-two__help-line-content">
+                                <div class="services-details-two__help-line-content">
                                     <p class="services-details-two__help-line-sub-title">Book at:</p>
                                     <h3 class="services-details-two__help-number"><a target="_blank" href="https://wa.me/+447931931966"><i class="fab fa-whatsapp"></i>  44 7931 931966</a></h3>
-                                </div> -->
+                                </div>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-xl-8 col-lg-7">
-
-                        <h3 style="text-align: center;" class="services-details-two__title-1">Coming Soon</h3>
-
-                        <!-- <div class="services-details-two__right">
+                        <div class="services-details-two__right">
                             <div class="services-details-two__img">
-                                <img src="assets/images/My-images/service-2.jpg" alt="">
+                                <img src="assets/images/My-images/head-spa-banner.jpg" alt="Japanese Head Spa">
                             </div>
-                            <h3 class="services-details-two__title-1">Spa Facials</h3>
-                            <p class="services-details-two__text-1">Lorem ipsum is simply free text used by copytyping
-                                refreshing. Neque porro est qui dolorem ipsum quia quaed inventore veritatis et quasi
-                                architecto beatae vitae dicta sunt explicabo. Aelltes port lacus quis enim var sed
-                                efficitur turpis gilla sed sit amet finibus eros. Lorem Ipsum is simply dummy text of
-                                the printing and typesetting industry. Lorem Ipsum has been the ndustry standard dummy
-                                text ever since the 1500s, when an unknown printer took a galley of type and scrambled
-                                it to make a type specimen book.</p>
-                            <p class="services-details-two__text-2">It has survived not only five centuries. Lorem Ipsum
-                                is
-                                simply dummy text of the new design printng and type setting Ipsum take a look at our
-                                round. When an unknown printer took a galley of type and scrambled it to make a type
-                                specimen book. It has survived not only five centuries, but also the leap into
-                                electronic typesetting.</p>
-                            <h3 class="services-details-two__title-2">What are the benefits of massages?</h3>
-                            <p class="services-details-two__text-3">Duis aute irure dolor in this helps to break up scar
-                                tissue that forms following reprehenderit in voluptate velit esse cillum.</p>
-                            <ul class="services-details-two__points list-unstyled">
+
+                            <!-- Main Title -->
+                            <h3 class="services-details-two__title-1">Japanese Head Spa</h3>
+                            <p class="services-details-two__text-1">
+                                A Japanese Head Spa is a luxurious scalp and hair ritual that goes far beyond a regular massage. Using deep cleansing, acupressure, and nourishing treatments, it restores balance to the scalp, strengthens hair, and brings total relaxation to mind and body.
+                            </p>
+                            <p class="services-details-two__text-2">
+                                This holistic treatment combines aromatherapy, steam therapy, and advanced scalp care with soothing massage techniques. The result is a healthier scalp, shinier hair, and a refreshed state of wellbeing that feels both indulgent and restorative.
+                            </p>
+
+                            <!-- BENEFITS SECTION -->
+                            <h3 class="services-details-two__title-2">Why You’ll Love Our Head Spa</h3>
+                            <ul style="margin-bottom: 37px; margin-top: 26px;" class="services-details-two__points list-unstyled">
                                 <li>
-                                    <div class="icon">
-                                        <span class="fa fa-check"></span>
-                                    </div>
-                                    <div class="text">
-                                        <p>Before your deep tissue massagee such a touch</p>
-                                    </div>
+                                    <div class="icon"><span class="fa fa-check"></span></div>
+                                    <div class="text"><p>Deep scalp detox to remove oil, dirt & buildup</p></div>
                                 </li>
                                 <li>
-                                    <div class="icon">
-                                        <span class="fa fa-check"></span>
-                                    </div>
-                                    <div class="text">
-                                        <p>The massage therapist will warm up your muscles</p>
-                                    </div>
+                                    <div class="icon"><span class="fa fa-check"></span></div>
+                                    <div class="text"><p>Stimulates circulation for stronger, healthier hair</p></div>
                                 </li>
                                 <li>
-                                    <div class="icon">
-                                        <span class="fa fa-check"></span>
-                                    </div>
-                                    <div class="text">
-                                        <p>It’s not unusual elit esse cillum eu fugiat</p>
-                                    </div>
+                                    <div class="icon"><span class="fa fa-check"></span></div>
+                                    <div class="text"><p>Relieves stress, headaches & eye strain</p></div>
                                 </li>
                                 <li>
-                                    <div class="icon">
-                                        <span class="fa fa-check"></span>
-                                    </div>
-                                    <div class="text">
-                                        <p>Duis aute irure dolor in in voluptate</p>
-                                    </div>
+                                    <div class="icon"><span class="fa fa-check"></span></div>
+                                    <div class="text"><p>Leaves hair glossy, soft, and full of life</p></div>
+                                </li>
+                                <li>
+                                    <div class="icon"><span class="fa fa-check"></span></div>
+                                    <div class="text"><p>Enhances sleep quality and overall relaxation</p></div>
                                 </li>
                             </ul>
+
+                            <!-- FAQ Section -->
                             <div class="services-details-two__faq">
                                 <div class="accrodion-grp" data-grp-name="faq-one-accrodion">
-                                    <div class="accrodion">
-                                        <div class="accrodion-title">
-                                            <h4>What is the right spa for me?</h4>
-                                        </div>
-                                        <div class="accrodion-content">
-                                            <div class="inner">
-                                                <p>There are many variations of passages of available but the majority
-                                                    have in that some form by injected randomised words which don’t look
-                                                    even as slightly believable now.</p>
-                                            </div>
-                                        </div>
-                                    </div>
+
                                     <div class="accrodion active">
                                         <div class="accrodion-title">
-                                            <h4>Do they offer spa treatments for men?</h4>
+                                            <h4>What happens during a Japanese Head Spa?</h4>
                                         </div>
                                         <div class="accrodion-content">
                                             <div class="inner">
-                                                <p>There are many variations of passages of available but the majority
-                                                    have in that some form by injected randomised words which don’t look
-                                                    even as slightly believable now.</p>
+                                                <p>Your session begins with a scalp and hair analysis, followed by a deep triple cleanse to remove buildup and impurities. Steam therapy softens the scalp, while shiatsu-inspired acupressure massage improves circulation and melts away stress. Nourishing serums or masks are applied, and the ritual often includes neck and shoulder massage for complete relaxation.</p>
                                             </div>
                                         </div>
                                     </div>
+
                                     <div class="accrodion">
                                         <div class="accrodion-title">
-                                            <h4>Should I eat before a massage?</h4>
+                                            <h4>What are the benefits of a Head Spa?</h4>
                                         </div>
                                         <div class="accrodion-content">
                                             <div class="inner">
-                                                <p>There are many variations of passages of available but the majority
-                                                    have in that some form by injected randomised words which don’t look
-                                                    even as slightly believable now.</p>
+                                                <p>A Head Spa detoxifies the scalp, promotes stronger and healthier hair growth, and relieves tension. It can reduce headaches and eye strain, improve sleep quality, and leave hair noticeably softer, shinier, and more manageable. Beyond beauty, it’s a true wellness ritual that balances body and mind.</p>
                                             </div>
                                         </div>
                                     </div>
+
                                     <div class="accrodion">
                                         <div class="accrodion-title">
-                                            <h4>Should I shower before a treatment?</h4>
+                                            <h4>What is included in a Head Spa treatment?</h4>
                                         </div>
                                         <div class="accrodion-content">
                                             <div class="inner">
-                                                <p>There are many variations of passages of available but the majority
-                                                    have in that some form by injected randomised words which don’t look
-                                                    even as slightly believable now.</p>
+                                                <p>Our Head Spa is fully tailored and may include:</p>
+                                                <ul>
+                                                    <li>Hair & scalp analysis</li>
+                                                    <li>Scalp serum or hair oiling</li>
+                                                    <li>Facial double cleanse & exfoliation</li>
+                                                    <li>Scalp exfoliation & deep triple cleanse</li>
+                                                    <li>Repairing hair mask with steam therapy</li>
+                                                    <li>Hot towel ritual & halo water therapy</li>
+                                                    <li>Relaxing massage using various tools & techniques</li>
+                                                    <li>Eye mask, toner, serum, moisturizer & SPF finish</li>
+                                                </ul>
+                                                <p>Each treatment is customized to restore scalp health, rejuvenate the skin, and leave your hair revitalized and radiant.</p>
                                             </div>
                                         </div>
+                                    </div>
+
+                                    <div class="accrodion">
+                                        <div class="accrodion-title">
+                                            <h4>Is a Head Spa suitable for all hair and scalp types?</h4>
+                                        </div>
+                                        <div class="accrodion-content">
+                                            <div class="inner">
+                                                <p>Yes, absolutely. Whether you have dry, oily, sensitive, or dandruff-prone scalp, the treatment is adapted to your needs. Products and techniques are carefully chosen to suit your scalp and hair type for safe, effective results.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="accrodion">
+                                        <div class="accrodion-title">
+                                            <h4>How often should I get a Head Spa?</h4>
+                                        </div>
+                                        <div class="accrodion-content">
+                                            <div class="inner">
+                                                <p>For best results, we recommend a Head Spa every 3–4 weeks. This keeps the scalp balanced, prevents buildup, and supports healthy hair growth. However, even a single session offers instant relaxation and visible shine.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+
+                            <!-- Pricing Button -->
+                            <div class="row">
+                                <div class="col-xl-10">
+                                    <div class="services-two__btn-box">
+                                        <a href="pricing-plans.html#headspa-menu" class="thm-btn services-two__btn">Our Pricing</a>
                                     </div>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
             </div>
