--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                                 <h3 class="services-one__title"><a href="pricing-plans.html#beauty-menu">Head Spa</a></h3>
                                 <p class="services-one__text">Relax and unwind with our rejuvenating head spa treatments, all from the comfort of our peaceful home salon.</p>
                                 <div class="services-one__btn-box">
-                                    <a href="pricing-plans.html#beauty-menu" class="services-one__btn">Coming Soon<i
+                                    <a href="pricing-plans.html#beauty-menu" class="services-one__btn">Book Now<i
                                             class="icon-right-arrow"></i></a>
                                 </div>
                             </div>
@@ -363,9 +363,14 @@
                         <div class="col-xl-6 col-lg-6">
                             <div class="services-details-one__massages-left">
                                 <h3 class="services-details-one__massages-title">Head Spa</h3>
-                                <p class="services-details-one__massages-text-1">Our Head Spa service is coming soon! We're crafting a deeply relaxing experience to refresh your scalp, soothe your senses, and leave you feeling renewed in our home-based space.</p>
-                                <p class="services-details-one__massages-text-2">Stay tuned as we prepare the perfect head spa ritual designed to promote wellness, relieve stress, and enhance your overall beauty journey.</p>
+                                <p class="services-details-one__massages-text-1">
+                                    Discover the ultimate relaxation with our Japanese Head Spa—a luxurious treatment that goes far beyond a simple scalp massage. This rejuvenating ritual deeply cleanses the scalp, improves circulation, and nourishes both hair and mind through soothing massage and steam therapy.
+                                </p>
+                                <p class="services-details-one__massages-text-2">
+                                    Each session is tailored to restore balance, relieve stress, and leave your hair glossy, healthy, and full of life. It’s not just a beauty treatment, but a wellness experience designed to calm the senses and refresh you inside and out.
+                                </p>
                             </div>
+
                         </div>
                         <div class="col-xl-6 col-lg-6">
                             <div class="services-details-one__massages-right">
@@ -507,10 +512,10 @@
                                     <li>
                                         <div class="services-two__services-name">
                                             <h3><a href="">Head Spa</a></h3>
-                                            <p>2 hrs 15 mins</p>
+                                            <p>1 hr 50 mins</p>
                                         </div>
                                         <div class="services-two__services-price">
-                                            <h4>Coming Soon</h4>
+                                            <h4>£70.00</h4>
                                         </div>
                                     </li>
                                     <li>
