--- a/pricing-plans.html
+++ b/pricing-plans.html
@@ -363,11 +363,11 @@
                                     <h3 class="services-two__title">Beauty Treatments & Head Spa</h3>
                                     <li>
                                         <div class="services-two__services-name">
-                                            <h3>Korean Head Spa</h3>
+                                            <h3>Japanese Head Spa</h3>
                                             <p>From</p>
                                         </div>
                                         <div class="services-two__services-price">
-                                            <h4>Coming Soon</h4>
+                                            <h4>£70.00</h4>
                                         </div>
                                     </li>
                                     <h3 class="services-two__title">Facials</h3>
