--- a/head-spa.html
+++ b/head-spa.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> Head Spa || Asuno Salon </title>
+    <title> Head Spa || Asuna Salon </title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
-    <meta name="description" content="mellis HTML 5 Template " />
+    <meta name="description" content="Asuna Salon - Beauty and Wellness" />
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="assets/vendors/nouislider/nouislider.pips.css" />
     <link rel="stylesheet" href="assets/vendors/odometer/odometer.min.css" />
     <link rel="stylesheet" href="assets/vendors/swiper/swiper.min.css" />
-    <link rel="stylesheet" href="assets/vendors/mellis-icons/style.css">
+    <link rel="stylesheet" href="assets/vendors/asuna-icons/style.css">
     <link rel="stylesheet" href="assets/vendors/tiny-slider/tiny-slider.min.css" />
     <link rel="stylesheet" href="assets/vendors/reey-font/stylesheet.css" />
     <link rel="stylesheet" href="assets/vendors/owl-carousel/owl.carousel.min.css" />
@@ -48,8 +48,8 @@
     <link rel="stylesheet" href="assets/vendors/twenty-twenty/twentytwenty.css" />
 
     <!-- template styles -->
-    <link rel="stylesheet" href="assets/css/mellis.css" />
-    <link rel="stylesheet" href="assets/css/mellis-responsive.css" />
+    <link rel="stylesheet" href="assets/css/asuna.css" />
+    <link rel="stylesheet" href="assets/css/asuna-responsive.css" />
 </head>
 
 <body>
@@ -372,7 +372,7 @@
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="site-footer__bottom-inner">
-                                <p class="site-footer__bottom-text">© Copyright 2025 by <a href="#">Asuno Salon</a></p>
+                                <p class="site-footer__bottom-text">© Copyright 2025 by <a href="#">Asuna Salon</a></p>
                                 <ul class="list-unstyled site-footer__bottom-menu">
                                     <li><a href="contact.html">Help</a></li>
                                 </ul>
@@ -487,7 +487,7 @@
 
 
     <!-- template js -->
-    <script src="assets/js//mellis.js"></script>
+    <script src="assets/js//asuna.js"></script>
 </body>
 
 </html>
