--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> Home Page || Asuno Salon </title>
+    <title> Home Page || Asuna Salon </title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
-    <meta name="description" content="Asuno Salon - Beauty and Wellness" />
+    <meta name="description" content="Asuna Salon - Beauty and Wellness" />
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="assets/vendors/nouislider/nouislider.pips.css" />
     <link rel="stylesheet" href="assets/vendors/odometer/odometer.min.css" />
     <link rel="stylesheet" href="assets/vendors/swiper/swiper.min.css" />
-    <link rel="stylesheet" href="assets/vendors/mellis-icons/style.css">
+    <link rel="stylesheet" href="assets/vendors/asuna-icons/style.css">
     <link rel="stylesheet" href="assets/vendors/tiny-slider/tiny-slider.min.css" />
     <link rel="stylesheet" href="assets/vendors/reey-font/stylesheet.css" />
     <link rel="stylesheet" href="assets/vendors/owl-carousel/owl.carousel.min.css" />
@@ -48,8 +48,8 @@
     <link rel="stylesheet" href="assets/vendors/twenty-twenty/twentytwenty.css" />
 
     <!-- template styles -->
-    <link rel="stylesheet" href="assets/css/mellis.css" />
-    <link rel="stylesheet" href="assets/css/mellis-responsive.css" />
+    <link rel="stylesheet" href="assets/css/asuna.css" />
+    <link rel="stylesheet" href="assets/css/asuna-responsive.css" />
 </head>
 
 <body>
@@ -166,7 +166,7 @@
                                             <!-- <img src="assets/images/My-images/nav-logo-white.svg" alt=""> -->
                                         </div>
                                         <p class="main-slider__sub-title">ideal place to unwind</p>
-                                        <h2 class="main-slider__title">Asuno Salon</h2>
+                                        <h2 class="main-slider__title">Asuna Salon</h2>
                                         <div class="main-slider__btn-box">
                                             <a href="hair-styling.html" class="thm-btn main-slider__btn">Discover more</a>
                                         </div>
@@ -190,7 +190,7 @@
 
                                         </div>
                                         <p class="main-slider__sub-title">ideal place to unwind</p>
-                                        <h2 class="main-slider__title">Asuno Salon</h2>
+                                        <h2 class="main-slider__title">Asuna Salon</h2>
                                         <div class="main-slider__btn-box">
                                             <a href="hair-styling.html" class="thm-btn main-slider__btn">Discover more</a>
                                         </div>
@@ -232,9 +232,9 @@
                             <div class="section-title text-left">
                                 <span class="section-title__tagline">Get to know us</span>
                                 <h2 class="section-title__title">Welcome to the
-                                    <br> Asuno Salon</h2>
+                                    <br> Asuna Salon</h2>
                             </div>
-                            <p class="welcome-one__text">Asuno is a home-based salon. We offer expert hairdressing, soothing head spa treatments, and personalized beauty services in a relaxed setting.</p>
+                            <p class="welcome-one__text">Asuna is a home-based salon. We offer expert hairdressing, soothing head spa treatments, and personalized beauty services in a relaxed setting.</p>
                             <ul class="welcome-one__points list-unstyled">
                                 <li>
                                     <div class="icon">
@@ -393,7 +393,7 @@
                         <div class="col-xl-6 col-lg-6">
                             <div class="services-details-one__benefits-right">
                                 <h3 class="services-details-one__benefits-title">Hair Dressing</h3> 
-                                <p class="services-details-one__benefits-text">At Asuno Salon, we offer professional hairdressing tailored to your style. Whether it's a simple trim or a full transformation, we ensure every cut enhances your natural beauty.</p>
+                                <p class="services-details-one__benefits-text">At Asuna Salon, we offer professional hairdressing tailored to your style. Whether it's a simple trim or a full transformation, we ensure every cut enhances your natural beauty.</p>
                                 <ul class="services-details-one__benefits-points list-unstyled">
                                     <li>
                                         <div class="icon">
@@ -665,7 +665,7 @@
                                         <span class="fa fa-star"></span>
                                         <span class="fa fa-star"></span>
                                     </div>
-                                    <p class="testimonial-one__text-2">I have been to Asuno Salon it’s absolutely amazing, The work is amazing I’ve been three times and I had a really good treatment for my hair also, the makeup is so beautiful very friendly too 😊</p>
+                                    <p class="testimonial-one__text-2">I have been to Asuna Salon it’s absolutely amazing, The work is amazing I’ve been three times and I had a really good treatment for my hair also, the makeup is so beautiful very friendly too 😊</p>
                                     <div class="testimonial-one__client-info">
                                         <div class="testimonial-one__client-img">
                                             <!-- <img src="assets/images/My-images/testimonial-1.jpg" alt=""> -->
@@ -693,7 +693,7 @@
                                         <span class="fa fa-star"></span>
                                         <span class="fa fa-star"></span>
                                     </div>
-                                    <p class="testimonial-one__text-2">I went to Asuno Salon for a Bob haircut and I had a lot of before. All I can say Saba did a fabulous job of cutting my hair and was very attentive to getting it perfect! Absolutely love my hair!</p>
+                                    <p class="testimonial-one__text-2">I went to Asuna Salon for a Bob haircut and I had a lot of before. All I can say Saba did a fabulous job of cutting my hair and was very attentive to getting it perfect! Absolutely love my hair!</p>
                                     <div class="testimonial-one__client-info">
                                         <div class="testimonial-one__client-img">
                                             <!-- <img src="assets/images/My-images/testimonial-1.jpg" alt=""> -->
@@ -973,7 +973,7 @@
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="site-footer__bottom-inner">
-                                <p class="site-footer__bottom-text">© Copyright 2025 by <a href="#">Asuno Salon</a></p>
+                                <p class="site-footer__bottom-text">© Copyright 2025 by <a href="#">Asuna Salon</a></p>
                                 <ul class="list-unstyled site-footer__bottom-menu">
                                     <li><a href="contact.html">Help</a></li>
                                 </ul>
@@ -1087,7 +1087,7 @@
 
 
     <!-- template js -->
-    <script src="assets/js//mellis.js"></script>
+    <script src="assets/js//asuna.js"></script>
 </body>
 
 </html>
