--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
                                 <ul class="list-unstyled services-two__list">
                                     <li>
                                         <div class="services-two__services-name">
-                                            <h3><a href="#">Cut, wash & blowdry</a></h3>
+                                            <h3>Cut, wash & blowdry</h3>
                                             <p>45 Minutes</p>
                                         </div>
                                         <div class="services-two__services-price">
@@ -466,7 +466,7 @@
                                     </li>
                                     <li>
                                         <div class="services-two__services-name">
-                                            <h3><a href="#">Restyle with blow-dry</a></h3>
+                                            <h3>Restyle with blow-dry</h3>
                                             <p>30 Minutes</p>
                                         </div>
                                         <div class="services-two__services-price">
@@ -475,7 +475,7 @@
                                     </li>
                                     <li>
                                         <div class="services-two__services-name">
-                                            <h3><a href="#">Party hair</a></h3>
+                                            <h3>Party hair</h3>
                                             <p>2 hrs</p>
                                         </div>
                                         <div class="services-two__services-price">
@@ -484,7 +484,7 @@
                                     </li>
                                     <li>
                                         <div class="services-two__services-name">
-                                            <h3><a href="#">Bridal Hair</a></h3>
+                                            <h3>Bridal Hair</h3>
                                             <p>2 hrs 35 mins</p>
                                         </div>
                                         <div class="services-two__services-price">
@@ -493,7 +493,7 @@
                                     </li>
                                     <li>
                                         <div class="services-two__services-name">
-                                            <h3><a href="#">Balyage</a></h3>
+                                            <h3>Balyage</h3>
                                             <p>2 hrs 15 mins</p>
                                         </div>
                                         <div class="services-two__services-price">
@@ -511,16 +511,16 @@
                                 <ul class="list-unstyled services-two__list">
                                     <li>
                                         <div class="services-two__services-name">
-                                            <h3><a href="">Head Spa</a></h3>
+                                            <h3>Head Spa</h3>
                                             <p>1 hr 50 mins</p>
                                         </div>
                                         <div class="services-two__services-price">
-                                            <h4>£70.00</h4>
+                                            <h4>£75.00</h4>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="services-two__services-name">
-                                            <h3><a href="#">Herbal Facial</a></h3>
+                                            <h3>Herbal Facial</h3>
                                             <p>1 hr 35 mins</p>
                                         </div>
                                         <div class="services-two__services-price">
@@ -529,7 +529,7 @@
                                     </li>
                                     <li>
                                         <div class="services-two__services-name">
-                                            <h3><a href="#">Full Body wax</a></h3>
+                                            <h3>Full Body wax</h3>
                                             <p>2 hrs</p>
                                         </div>
                                         <div class="services-two__services-price">
@@ -538,7 +538,7 @@
                                     </li>
                                     <li>
                                         <div class="services-two__services-name">
-                                            <h3><a href="#">Hollywood Bikini Line Wax </a></h3>
+                                            <h3>Hollywood Bikini Line Wax </h3>
                                             <p>2 hrs 35 mins</p>
                                         </div>
                                         <div class="services-two__services-price">
@@ -547,7 +547,7 @@
                                     </li>
                                     <li>
                                         <div class="services-two__services-name">
-                                            <h3><a href="#">Crystal Clear Dermabrasion</a></h3>
+                                            <h3>Crystal Clear Dermabrasion</h3>
                                             <p>1 hr</p>
                                         </div>
                                         <div class="services-two__services-price">
