--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                                 <div class="col-xl-12">
                                     <div class="main-slider__content">
                                         <div class="main-slider__icon">
-                                            <img src="assets/images/icon/main-slider-icon-1.png" alt="">
+                                            <img  src="assets/images/icon/slider-logo.png" alt="">
                                             <!-- <img src="assets/images/My-images/nav-logo-white.svg" alt=""> -->
                                         </div>
                                         <p class="main-slider__sub-title">ideal place to unwind</p>
@@ -185,8 +185,8 @@
                                 <div class="col-xl-12">
                                     <div class="main-slider__content">
                                         <div class="main-slider__icon">
-                                            <!-- <img src="assets/images/My-images/nav-logo-white.svg" alt=""> -->
-                                            <img src="assets/images/icon/main-slider-icon-1.png" alt="">
+                                            <img src="assets/images/icon/slider-logo.png" alt="">
+                                            <!-- <img src="assets/images/icon/main-slider-icon-1.png" alt=""> -->
 
                                         </div>
                                         <p class="main-slider__sub-title">ideal place to unwind</p>
