--- a/head-spa.html
+++ b/head-spa.html
@@ -227,7 +227,66 @@
                             <div class="services-details-two__faq">
                                 <div class="accrodion-grp" data-grp-name="faq-one-accrodion">
 
-                                    <div class="accrodion active">
+                                     <div class="accrodion">
+                                        <div class="accrodion-title">
+                                            <h4>Can you treat pregnant women?</h4>
+                                        </div>
+                                        <div class="accrodion-content">
+                                            <div class="inner">
+                                                <p>Our Head Spa treatments are not recommended during pregnancy, as they involve extended time lying flat and the use of essential oils that may not be suitable for expectant mothers. We care deeply about your safety and comfort, so we suggest waiting until after pregnancy to enjoy the full Head Spa experience and its deep relaxation benefits.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="accrodion">
+                                        <div class="accrodion-title">
+                                            <h4>Can I receive a Head Spa if I have hair extensions?</h4>
+                                        </div>
+                                        <div class="accrodion-content">
+                                            <div class="inner">
+                                                <p>For best results, we do not perform Head Spa treatments on clients with extensions, braids, or locs. These styles can block access to the scalp, limiting the effectiveness of deep cleansing and exfoliation. To experience the full rejuvenating benefits of our Japanese Head Spa, please wait until extensions are removed so your scalp can be treated thoroughly.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="accrodion">
+                                        <div class="accrodion-title">
+                                            <h4>How should I prepare before my Head Spa appointment?</h4>
+                                        </div>
+                                        <div class="accrodion-content">
+                                            <div class="inner">
+                                                <p><strong>Do’s</strong><br>
+                                                • Arrive with clean or lightly styled hair to help us assess your scalp condition easily.<br>
+                                                • Share any scalp sensitivities or hair concerns with your therapist for a personalized experience.<br>
+                                                • Stay hydrated and mentally unwind before your session to make the most of your relaxation time.</p>
+
+                                                <p><strong>Don’ts</strong><br>
+                                                • Avoid applying heavy styling products such as gels, waxes, or sprays before your visit.<br>
+                                                • Don’t eat a heavy meal just before your treatment—you’ll be lying down for a while and comfort matters.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="accrodion">
+                                        <div class="accrodion-title">
+                                            <h4>What should I do after my Head Spa treatment?</h4>
+                                        </div>
+                                        <div class="accrodion-content">
+                                            <div class="inner">
+                                                <p><strong>Do’s</strong><br>
+                                                • Drink plenty of water—hydration helps flush out toxins and keeps your scalp balanced.<br>
+                                                • Let your hair air-dry or style gently—your scalp will be fresh and more sensitive than usual.<br>
+                                                • Take note of how your scalp feels after the session to track improvements over time.</p>
+
+                                                <p><strong>Don’ts</strong><br>
+                                                • Avoid using harsh shampoos or chemical products for at least 24–48 hours.<br>
+                                                • Don’t expose your scalp to direct sunlight or high heat immediately after exfoliation.<br>
+                                                • Refrain from sleeping with wet hair—it can cause irritation and disrupt the scalp’s natural healing after a deep cleanse.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="accrodion">
                                         <div class="accrodion-title">
                                             <h4>What happens during a Japanese Head Spa?</h4>
                                         </div>
