--- a/head-spa.html
+++ b/head-spa.html
@@ -227,7 +227,7 @@
                             <div class="services-details-two__faq">
                                 <div class="accrodion-grp" data-grp-name="faq-one-accrodion">
 
-                                     <div class="accrodion">
+                                     <div class="accrodion active">
                                         <div class="accrodion-title">
                                             <h4>Can you treat pregnant women?</h4>
                                         </div>
